--- a/archives/toutiao-search/2023-10-12.md
+++ b/archives/toutiao-search/2023-10-12.md
@@ -1,56 +1,84 @@
 # 2023-10-12
 
-共 146 条
+共 172 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 12 2023 11:00:45 GMT+0800 (China Standard Time) -->
-1. [失联潜水员韩颋在水下百余米处被找到](https://so.toutiao.com/search?keyword=失联潜水员韩颋在水下百余米处被找到)
-1. [连续1周Citywalk 女生左脚只能跛行](https://so.toutiao.com/search?keyword=连续1周Citywalk+女生左脚只能跛行)
+<!-- 最后更新时间 Thu Oct 12 2023 12:00:39 GMT+0800 (China Standard Time) -->
+1. [政府奖励双冠王切阳什姐30万](https://so.toutiao.com/search?keyword=政府奖励双冠王切阳什姐30万)
+1. [学校为减负要求学生不带书包回家](https://so.toutiao.com/search?keyword=学校为减负要求学生不带书包回家)
 1. [为科学插上跨越山水的翅膀](https://so.toutiao.com/search?keyword=为科学插上跨越山水的翅膀)
 1. [刘暖曦直播4次后被投诉永久禁播](https://so.toutiao.com/search?keyword=刘暖曦直播4次后被投诉永久禁播)
-1. [美国男子徒手爬以色列领事馆大楼](https://so.toutiao.com/search?keyword=美国男子徒手爬以色列领事馆大楼)
+1. [光大集团原董事长李晓鹏被逮捕](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被逮捕)
 1. [巴以冲突双方超2300人死亡](https://so.toutiao.com/search?keyword=巴以冲突双方超2300人死亡)
 1. [以色列一天内与黎巴嫩叙利亚互开火](https://so.toutiao.com/search?keyword=以色列一天内与黎巴嫩叙利亚互开火)
-1. [为何中国疫情期间不直接给百姓发钱](https://so.toutiao.com/search?keyword=为何中国疫情期间不直接给百姓发钱)
+1. [失联潜水员韩颋在水下百余米处被找到](https://so.toutiao.com/search?keyword=失联潜水员韩颋在水下百余米处被找到)
 1. [淘宝否认主持人李思思开直播](https://so.toutiao.com/search?keyword=淘宝否认主持人李思思开直播)
+1. [军嫂吐槽式炫夫：下班就回家带娃](https://so.toutiao.com/search?keyword=军嫂吐槽式炫夫：下班就回家带娃)
+1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
+1. [普京：俄罗斯始终支持巴勒斯坦建国](https://so.toutiao.com/search?keyword=普京：俄罗斯始终支持巴勒斯坦建国)
+1. [歌手黄安晒华为新机：飞机上信号满格](https://so.toutiao.com/search?keyword=歌手黄安晒华为新机：飞机上信号满格)
+1. [旅游企业紧急应对巴以冲突](https://so.toutiao.com/search?keyword=旅游企业紧急应对巴以冲突)
+1. [周杰伦演唱会前黄牛集体退票](https://so.toutiao.com/search?keyword=周杰伦演唱会前黄牛集体退票)
+1. [记者在巴以边境目击火箭弹拦截](https://so.toutiao.com/search?keyword=记者在巴以边境目击火箭弹拦截)
+1. [如何看“佛山电翰”出现人传人现象](https://so.toutiao.com/search?keyword=如何看“佛山电翰”出现人传人现象)
+1. [为何中国疫情期间不直接给百姓发钱](https://so.toutiao.com/search?keyword=为何中国疫情期间不直接给百姓发钱)
+1. [白宫：拜登没看到哈马斯斩首以儿童](https://so.toutiao.com/search?keyword=白宫：拜登没看到哈马斯斩首以儿童)
+1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
+1. [张琳艳热刺首秀：出场10分钟就进球](https://so.toutiao.com/search?keyword=张琳艳热刺首秀：出场10分钟就进球)
+1. [于文亮10天涨粉100万 本人回应](https://so.toutiao.com/search?keyword=于文亮10天涨粉100万+本人回应)
+1. [以极右团体不满医院救治哈马斯成员](https://so.toutiao.com/search?keyword=以极右团体不满医院救治哈马斯成员)
+1. [山东5市1区划入青岛圈](https://so.toutiao.com/search?keyword=山东5市1区划入青岛圈)
+1. [抖音10天涨粉百万的于文亮是谁](https://so.toutiao.com/search?keyword=抖音10天涨粉百万的于文亮是谁)
+1. [埃及：正与巴以冲突各方加强沟通](https://so.toutiao.com/search?keyword=埃及：正与巴以冲突各方加强沟通)
+1. [起底涉鼠头餐饮公司：供餐多所学校](https://so.toutiao.com/search?keyword=起底涉鼠头餐饮公司：供餐多所学校)
+1. [中国工会新一届领导机构诞生](https://so.toutiao.com/search?keyword=中国工会新一届领导机构诞生)
+1. [欧佩克上调需求预期](https://so.toutiao.com/search?keyword=欧佩克上调需求预期)
+1. [中国马术队巴黎奥运会参赛资格被取消](https://so.toutiao.com/search?keyword=中国马术队巴黎奥运会参赛资格被取消)
+1. [大衣哥被白发老人拎着行李箱堵家门](https://so.toutiao.com/search?keyword=大衣哥被白发老人拎着行李箱堵家门)
+1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
+1. [券商看好银行板块估值继续向上修复](https://so.toutiao.com/search?keyword=券商看好银行板块估值继续向上修复)
+1. [一汽丰田直播间被多少钱能买车刷屏](https://so.toutiao.com/search?keyword=一汽丰田直播间被多少钱能买车刷屏)
+1. [一年级女孩的发音急坏了家长](https://so.toutiao.com/search?keyword=一年级女孩的发音急坏了家长)
+1. [加沙唯一发电厂关闭](https://so.toutiao.com/search?keyword=加沙唯一发电厂关闭)
+1. [女技师称遭灌酒性侵 警方不予立案](https://so.toutiao.com/search?keyword=女技师称遭灌酒性侵+警方不予立案)
+1. [俄方称4名俄公民在巴以冲突中死亡](https://so.toutiao.com/search?keyword=俄方称4名俄公民在巴以冲突中死亡)
+1. [美国将向乌克兰提供新一轮军事支持](https://so.toutiao.com/search?keyword=美国将向乌克兰提供新一轮军事支持)
+1. [沧州银行堆“现金墙”展示信心](https://so.toutiao.com/search?keyword=沧州银行堆“现金墙”展示信心)
+1. [连续1周Citywalk 女生左脚只能跛行](https://so.toutiao.com/search?keyword=连续1周Citywalk+女生左脚只能跛行)
+1. [英媒：拜登政府中东计划遭颠覆](https://so.toutiao.com/search?keyword=英媒：拜登政府中东计划遭颠覆)
+1. [以色列军队继续空袭加沙地带](https://so.toutiao.com/search?keyword=以色列军队继续空袭加沙地带)
+1. [以色列央行宣布行长任期延长](https://so.toutiao.com/search?keyword=以色列央行宣布行长任期延长)
+1. [退休教授曾因吸烟致讲座场所被罚款](https://so.toutiao.com/search?keyword=退休教授曾因吸烟致讲座场所被罚款)
+1. [吴京闫妮新剧展现“爱与成长”](https://so.toutiao.com/search?keyword=吴京闫妮新剧展现“爱与成长”)
+1. [加沙地带卫生部门呼吁开辟安全通道](https://so.toutiao.com/search?keyword=加沙地带卫生部门呼吁开辟安全通道)
+1. [以色列外交部：已做好长期战争准备](https://so.toutiao.com/search?keyword=以色列外交部：已做好长期战争准备)
+1. [白宫回应中国驻旧金山总领馆遭冲闯](https://so.toutiao.com/search?keyword=白宫回应中国驻旧金山总领馆遭冲闯)
+1. [网友：女儿大学四年要花至少20万](https://so.toutiao.com/search?keyword=网友：女儿大学四年要花至少20万)
+1. [美国男子徒手爬以色列领事馆大楼](https://so.toutiao.com/search?keyword=美国男子徒手爬以色列领事馆大楼)
 1. [2023年应届生平均招聘月薪10342元](https://so.toutiao.com/search?keyword=2023年应届生平均招聘月薪10342元)
 1. [专家：巴以冲突将重绘加沙政治地图](https://so.toutiao.com/search?keyword=专家：巴以冲突将重绘加沙政治地图)
 1. [以方称已击毙近1000名哈马斯渗透者](https://so.toutiao.com/search?keyword=以方称已击毙近1000名哈马斯渗透者)
-1. [普京：俄罗斯始终支持巴勒斯坦建国](https://so.toutiao.com/search?keyword=普京：俄罗斯始终支持巴勒斯坦建国)
 1. [盖尔·加朵发文支持以色列引争议](https://so.toutiao.com/search?keyword=盖尔·加朵发文支持以色列引争议)
 1. [以军在加沙使用白磷弹？联合国回应](https://so.toutiao.com/search?keyword=以军在加沙使用白磷弹？联合国回应)
 1. [加沙男子哭着拥抱空袭中丧生的女儿](https://so.toutiao.com/search?keyword=加沙男子哭着拥抱空袭中丧生的女儿)
 1. [以色列专家：75岁的以色列前途未卜](https://so.toutiao.com/search?keyword=以色列专家：75岁的以色列前途未卜)
 1. [联合国11名人员在以军空袭中死亡](https://so.toutiao.com/search?keyword=联合国11名人员在以军空袭中死亡)
-1. [如何看“佛山电翰”出现人传人现象](https://so.toutiao.com/search?keyword=如何看“佛山电翰”出现人传人现象)
-1. [周杰伦演唱会前黄牛集体退票](https://so.toutiao.com/search?keyword=周杰伦演唱会前黄牛集体退票)
-1. [抖音10天涨粉百万的于文亮是谁](https://so.toutiao.com/search?keyword=抖音10天涨粉百万的于文亮是谁)
-1. [大衣哥被白发老人拎着行李箱堵家门](https://so.toutiao.com/search?keyword=大衣哥被白发老人拎着行李箱堵家门)
-1. [沧州银行堆“现金墙”展示信心](https://so.toutiao.com/search?keyword=沧州银行堆“现金墙”展示信心)
-1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
-1. [于文亮10天涨粉100万 本人回应](https://so.toutiao.com/search?keyword=于文亮10天涨粉100万+本人回应)
 1. [载有约旦援加沙物资的飞机推迟起飞](https://so.toutiao.com/search?keyword=载有约旦援加沙物资的飞机推迟起飞)
 1. [孙卓被拐案明日宣判 对话孙海洋](https://so.toutiao.com/search?keyword=孙卓被拐案明日宣判+对话孙海洋)
 1. [广州一男子地铁上猥亵女生](https://so.toutiao.com/search?keyword=广州一男子地铁上猥亵女生)
 1. [巴勒斯坦母亲因孩子被杀后崩溃呼喊](https://so.toutiao.com/search?keyword=巴勒斯坦母亲因孩子被杀后崩溃呼喊)
 1. [22名美国人在新一轮巴以冲突中丧生](https://so.toutiao.com/search?keyword=22名美国人在新一轮巴以冲突中丧生)
-1. [中国工会新一届领导机构诞生](https://so.toutiao.com/search?keyword=中国工会新一届领导机构诞生)
-1. [网友：女儿大学四年要花至少20万](https://so.toutiao.com/search?keyword=网友：女儿大学四年要花至少20万)
 1. [哈马斯宣布大规模袭击特拉维夫机场](https://so.toutiao.com/search?keyword=哈马斯宣布大规模袭击特拉维夫机场)
 1. [大熊猫爱宝双胞胎幼崽名字公布](https://so.toutiao.com/search?keyword=大熊猫爱宝双胞胎幼崽名字公布)
-1. [中国马术队巴黎奥运会参赛资格被取消](https://so.toutiao.com/search?keyword=中国马术队巴黎奥运会参赛资格被取消)
 1. [拜登1986年涉以色列的讲话被翻出](https://so.toutiao.com/search?keyword=拜登1986年涉以色列的讲话被翻出)
 1. [狗子瘸腿回家 主人在爪里发现金戒指](https://so.toutiao.com/search?keyword=狗子瘸腿回家+主人在爪里发现金戒指)
 1. [英国外交大臣突访以色列](https://so.toutiao.com/search?keyword=英国外交大臣突访以色列)
 1. [美联储考虑额外政策收紧以降低通胀](https://so.toutiao.com/search?keyword=美联储考虑额外政策收紧以降低通胀)
-1. [一汽丰田直播间被多少钱能买车刷屏](https://so.toutiao.com/search?keyword=一汽丰田直播间被多少钱能买车刷屏)
 1. [汪小菲透露大S生病严重](https://so.toutiao.com/search?keyword=汪小菲透露大S生病严重)
 1. [男孩抱着刚摘的柿子坐在家门口酣睡](https://so.toutiao.com/search?keyword=男孩抱着刚摘的柿子坐在家门口酣睡)
 1. [普京批评美国派遣航母激化中东局势](https://so.toutiao.com/search?keyword=普京批评美国派遣航母激化中东局势)
-1. [女技师称遭灌酒性侵 警方不予立案](https://so.toutiao.com/search?keyword=女技师称遭灌酒性侵+警方不予立案)
 1. [男子戴口罩光顾爸妈店铺老妈没认出](https://so.toutiao.com/search?keyword=男子戴口罩光顾爸妈店铺老妈没认出)
 1. [千里护送寻亲9年男子回家团圆](https://so.toutiao.com/search?keyword=千里护送寻亲9年男子回家团圆)
-1. [白宫回应中国驻旧金山总领馆遭冲闯](https://so.toutiao.com/search?keyword=白宫回应中国驻旧金山总领馆遭冲闯)
 1. [四川一出租甩客致人身亡？司机回应](https://so.toutiao.com/search?keyword=四川一出租甩客致人身亡？司机回应)
 1. [“国家队”出手对A股有何影响](https://so.toutiao.com/search?keyword=“国家队”出手对A股有何影响)
 1. [省委原书记落马1个多月3人同日被查](https://so.toutiao.com/search?keyword=省委原书记落马1个多月3人同日被查)
@@ -65,7 +93,6 @@
 1. [澳籍公民成蕾已获释返澳？中方回应](https://so.toutiao.com/search?keyword=澳籍公民成蕾已获释返澳？中方回应)
 1. [哈马斯否认“杀害儿童”](https://so.toutiao.com/search?keyword=哈马斯否认“杀害儿童”)
 1. [华北理工食堂鼠头为何双方都不认账](https://so.toutiao.com/search?keyword=华北理工食堂鼠头为何双方都不认账)
-1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
 1. [淘宝回应网传李思思账号](https://so.toutiao.com/search?keyword=淘宝回应网传李思思账号)
 1. [韩国亚运夺金免兵役的争议越来越大](https://so.toutiao.com/search?keyword=韩国亚运夺金免兵役的争议越来越大)
 1. [中国特使同巴勒斯坦外交官员通电话](https://so.toutiao.com/search?keyword=中国特使同巴勒斯坦外交官员通电话)
@@ -87,7 +114,6 @@
 1. [中纪委通报贵州3人被查](https://so.toutiao.com/search?keyword=中纪委通报贵州3人被查)
 1. [媒体：哈马斯打破以色列情报神话](https://so.toutiao.com/search?keyword=媒体：哈马斯打破以色列情报神话)
 1. [贵州银行原董事长李志明被查](https://so.toutiao.com/search?keyword=贵州银行原董事长李志明被查)
-1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
 1. [哈马斯称已释放3名被扣押人员](https://so.toutiao.com/search?keyword=哈马斯称已释放3名被扣押人员)
 1. [外交部谈如何解决巴以冲突循环往复](https://so.toutiao.com/search?keyword=外交部谈如何解决巴以冲突循环往复)
 1. [以媒：以色列政府将成立战时内阁](https://so.toutiao.com/search?keyword=以媒：以色列政府将成立战时内阁)
