--- a/archives/toutiao-search/2023-10-12.md
+++ b/archives/toutiao-search/2023-10-12.md
@@ -1,61 +1,79 @@
 # 2023-10-12
 
-共 172 条
+共 188 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 12 2023 12:00:39 GMT+0800 (China Standard Time) -->
-1. [政府奖励双冠王切阳什姐30万](https://so.toutiao.com/search?keyword=政府奖励双冠王切阳什姐30万)
-1. [学校为减负要求学生不带书包回家](https://so.toutiao.com/search?keyword=学校为减负要求学生不带书包回家)
+<!-- 最后更新时间 Thu Oct 12 2023 13:00:59 GMT+0800 (China Standard Time) -->
+1. [连续1周Citywalk 女生左脚只能跛行](https://so.toutiao.com/search?keyword=连续1周Citywalk+女生左脚只能跛行)
+1. [光大集团原董事长李晓鹏被逮捕](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被逮捕)
 1. [为科学插上跨越山水的翅膀](https://so.toutiao.com/search?keyword=为科学插上跨越山水的翅膀)
 1. [刘暖曦直播4次后被投诉永久禁播](https://so.toutiao.com/search?keyword=刘暖曦直播4次后被投诉永久禁播)
-1. [光大集团原董事长李晓鹏被逮捕](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被逮捕)
-1. [巴以冲突双方超2300人死亡](https://so.toutiao.com/search?keyword=巴以冲突双方超2300人死亡)
-1. [以色列一天内与黎巴嫩叙利亚互开火](https://so.toutiao.com/search?keyword=以色列一天内与黎巴嫩叙利亚互开火)
 1. [失联潜水员韩颋在水下百余米处被找到](https://so.toutiao.com/search?keyword=失联潜水员韩颋在水下百余米处被找到)
-1. [淘宝否认主持人李思思开直播](https://so.toutiao.com/search?keyword=淘宝否认主持人李思思开直播)
-1. [军嫂吐槽式炫夫：下班就回家带娃](https://so.toutiao.com/search?keyword=军嫂吐槽式炫夫：下班就回家带娃)
-1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
-1. [普京：俄罗斯始终支持巴勒斯坦建国](https://so.toutiao.com/search?keyword=普京：俄罗斯始终支持巴勒斯坦建国)
+1. [亓延军已任公安部常务副部长](https://so.toutiao.com/search?keyword=亓延军已任公安部常务副部长)
+1. [巴以冲突双方超2300人死亡](https://so.toutiao.com/search?keyword=巴以冲突双方超2300人死亡)
 1. [歌手黄安晒华为新机：飞机上信号满格](https://so.toutiao.com/search?keyword=歌手黄安晒华为新机：飞机上信号满格)
-1. [旅游企业紧急应对巴以冲突](https://so.toutiao.com/search?keyword=旅游企业紧急应对巴以冲突)
-1. [周杰伦演唱会前黄牛集体退票](https://so.toutiao.com/search?keyword=周杰伦演唱会前黄牛集体退票)
-1. [记者在巴以边境目击火箭弹拦截](https://so.toutiao.com/search?keyword=记者在巴以边境目击火箭弹拦截)
+1. [学校辟谣"霸凌女生亮相学校宣传片"](https://so.toutiao.com/search?keyword=学校辟谣"霸凌女生亮相学校宣传片")
+1. [2023年应届生平均招聘月薪10342元](https://so.toutiao.com/search?keyword=2023年应届生平均招聘月薪10342元)
+1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
+1. [外媒：以色列或将面临五线作战](https://so.toutiao.com/search?keyword=外媒：以色列或将面临五线作战)
 1. [如何看“佛山电翰”出现人传人现象](https://so.toutiao.com/search?keyword=如何看“佛山电翰”出现人传人现象)
+1. [旅游企业紧急应对巴以冲突](https://so.toutiao.com/search?keyword=旅游企业紧急应对巴以冲突)
+1. [欧议员：欧盟不能再把以色列称朋友](https://so.toutiao.com/search?keyword=欧议员：欧盟不能再把以色列称朋友)
+1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
+1. [普京：俄罗斯始终支持巴勒斯坦建国](https://so.toutiao.com/search?keyword=普京：俄罗斯始终支持巴勒斯坦建国)
+1. [于文亮10天涨粉100万 本人回应](https://so.toutiao.com/search?keyword=于文亮10天涨粉100万+本人回应)
+1. [农民断缴380元新农合？专家：别涨了](https://so.toutiao.com/search?keyword=农民断缴380元新农合？专家：别涨了)
+1. [周杰伦演唱会前黄牛集体退票](https://so.toutiao.com/search?keyword=周杰伦演唱会前黄牛集体退票)
+1. [大衣哥被白发老人拎着行李箱堵家门](https://so.toutiao.com/search?keyword=大衣哥被白发老人拎着行李箱堵家门)
+1. [抖音10天涨粉百万的于文亮是谁](https://so.toutiao.com/search?keyword=抖音10天涨粉百万的于文亮是谁)
+1. [产妇拍下产床抓痕引20万妈妈共鸣](https://so.toutiao.com/search?keyword=产妇拍下产床抓痕引20万妈妈共鸣)
+1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
+1. [军嫂吐槽式炫夫：下班就回家带娃](https://so.toutiao.com/search?keyword=军嫂吐槽式炫夫：下班就回家带娃)
+1. [一汽丰田直播间被多少钱能买车刷屏](https://so.toutiao.com/search?keyword=一汽丰田直播间被多少钱能买车刷屏)
+1. [山东5市1区划入青岛圈](https://so.toutiao.com/search?keyword=山东5市1区划入青岛圈)
+1. [沧州银行堆“现金墙”展示信心](https://so.toutiao.com/search?keyword=沧州银行堆“现金墙”展示信心)
+1. [谭松韵新片演闫妮吴京女儿](https://so.toutiao.com/search?keyword=谭松韵新片演闫妮吴京女儿)
+1. [中国工会新一届领导机构诞生](https://so.toutiao.com/search?keyword=中国工会新一届领导机构诞生)
+1. [黎巴嫩当地民众焚烧以色列国旗](https://so.toutiao.com/search?keyword=黎巴嫩当地民众焚烧以色列国旗)
+1. [女技师称遭灌酒性侵 警方不予立案](https://so.toutiao.com/search?keyword=女技师称遭灌酒性侵+警方不予立案)
+1. [学校为减负要求学生不带书包回家](https://so.toutiao.com/search?keyword=学校为减负要求学生不带书包回家)
+1. [中国马术队巴黎奥运会参赛资格被取消](https://so.toutiao.com/search?keyword=中国马术队巴黎奥运会参赛资格被取消)
+1. [以色列军队继续空袭加沙地带](https://so.toutiao.com/search?keyword=以色列军队继续空袭加沙地带)
+1. [胡厚崑：华为正努力将5.5G带进现实](https://so.toutiao.com/search?keyword=胡厚崑：华为正努力将5.5G带进现实)
+1. [美称不排除对伊朗实施新制裁的可能](https://so.toutiao.com/search?keyword=美称不排除对伊朗实施新制裁的可能)
+1. [一年级女孩的发音急坏了家长](https://so.toutiao.com/search?keyword=一年级女孩的发音急坏了家长)
+1. [租客怀孕5个月房东要求退租](https://so.toutiao.com/search?keyword=租客怀孕5个月房东要求退租)
+1. [广东一在建建筑坍塌致2死3伤](https://so.toutiao.com/search?keyword=广东一在建建筑坍塌致2死3伤)
+1. [张琳艳热刺首秀：出场10分钟就进球](https://so.toutiao.com/search?keyword=张琳艳热刺首秀：出场10分钟就进球)
+1. [为什么年轻人也开始被肺癌盯上](https://so.toutiao.com/search?keyword=为什么年轻人也开始被肺癌盯上)
+1. [网友：女儿大学四年要花至少20万](https://so.toutiao.com/search?keyword=网友：女儿大学四年要花至少20万)
+1. [白宫回应中国驻旧金山总领馆遭冲闯](https://so.toutiao.com/search?keyword=白宫回应中国驻旧金山总领馆遭冲闯)
+1. [省委原书记落马1个多月3人同日被查](https://so.toutiao.com/search?keyword=省委原书记落马1个多月3人同日被查)
+1. [南方电网半年56人主动投案](https://so.toutiao.com/search?keyword=南方电网半年56人主动投案)
+1. [多国人士高度赞赏共建一带一路成就](https://so.toutiao.com/search?keyword=多国人士高度赞赏共建一带一路成就)
+1. [退休教授曾因吸烟致讲座场所被罚款](https://so.toutiao.com/search?keyword=退休教授曾因吸烟致讲座场所被罚款)
+1. [伊拉克或将对美元进行管制](https://so.toutiao.com/search?keyword=伊拉克或将对美元进行管制)
+1. [媒体：以总理正处于内忧外患的境地](https://so.toutiao.com/search?keyword=媒体：以总理正处于内忧外患的境地)
+1. [政府奖励双冠王切阳什姐30万](https://so.toutiao.com/search?keyword=政府奖励双冠王切阳什姐30万)
+1. [以色列一天内与黎巴嫩叙利亚互开火](https://so.toutiao.com/search?keyword=以色列一天内与黎巴嫩叙利亚互开火)
+1. [淘宝否认主持人李思思开直播](https://so.toutiao.com/search?keyword=淘宝否认主持人李思思开直播)
+1. [记者在巴以边境目击火箭弹拦截](https://so.toutiao.com/search?keyword=记者在巴以边境目击火箭弹拦截)
 1. [为何中国疫情期间不直接给百姓发钱](https://so.toutiao.com/search?keyword=为何中国疫情期间不直接给百姓发钱)
 1. [白宫：拜登没看到哈马斯斩首以儿童](https://so.toutiao.com/search?keyword=白宫：拜登没看到哈马斯斩首以儿童)
-1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
-1. [张琳艳热刺首秀：出场10分钟就进球](https://so.toutiao.com/search?keyword=张琳艳热刺首秀：出场10分钟就进球)
-1. [于文亮10天涨粉100万 本人回应](https://so.toutiao.com/search?keyword=于文亮10天涨粉100万+本人回应)
 1. [以极右团体不满医院救治哈马斯成员](https://so.toutiao.com/search?keyword=以极右团体不满医院救治哈马斯成员)
-1. [山东5市1区划入青岛圈](https://so.toutiao.com/search?keyword=山东5市1区划入青岛圈)
-1. [抖音10天涨粉百万的于文亮是谁](https://so.toutiao.com/search?keyword=抖音10天涨粉百万的于文亮是谁)
 1. [埃及：正与巴以冲突各方加强沟通](https://so.toutiao.com/search?keyword=埃及：正与巴以冲突各方加强沟通)
 1. [起底涉鼠头餐饮公司：供餐多所学校](https://so.toutiao.com/search?keyword=起底涉鼠头餐饮公司：供餐多所学校)
-1. [中国工会新一届领导机构诞生](https://so.toutiao.com/search?keyword=中国工会新一届领导机构诞生)
 1. [欧佩克上调需求预期](https://so.toutiao.com/search?keyword=欧佩克上调需求预期)
-1. [中国马术队巴黎奥运会参赛资格被取消](https://so.toutiao.com/search?keyword=中国马术队巴黎奥运会参赛资格被取消)
-1. [大衣哥被白发老人拎着行李箱堵家门](https://so.toutiao.com/search?keyword=大衣哥被白发老人拎着行李箱堵家门)
-1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
 1. [券商看好银行板块估值继续向上修复](https://so.toutiao.com/search?keyword=券商看好银行板块估值继续向上修复)
-1. [一汽丰田直播间被多少钱能买车刷屏](https://so.toutiao.com/search?keyword=一汽丰田直播间被多少钱能买车刷屏)
-1. [一年级女孩的发音急坏了家长](https://so.toutiao.com/search?keyword=一年级女孩的发音急坏了家长)
 1. [加沙唯一发电厂关闭](https://so.toutiao.com/search?keyword=加沙唯一发电厂关闭)
-1. [女技师称遭灌酒性侵 警方不予立案](https://so.toutiao.com/search?keyword=女技师称遭灌酒性侵+警方不予立案)
 1. [俄方称4名俄公民在巴以冲突中死亡](https://so.toutiao.com/search?keyword=俄方称4名俄公民在巴以冲突中死亡)
 1. [美国将向乌克兰提供新一轮军事支持](https://so.toutiao.com/search?keyword=美国将向乌克兰提供新一轮军事支持)
-1. [沧州银行堆“现金墙”展示信心](https://so.toutiao.com/search?keyword=沧州银行堆“现金墙”展示信心)
-1. [连续1周Citywalk 女生左脚只能跛行](https://so.toutiao.com/search?keyword=连续1周Citywalk+女生左脚只能跛行)
 1. [英媒：拜登政府中东计划遭颠覆](https://so.toutiao.com/search?keyword=英媒：拜登政府中东计划遭颠覆)
-1. [以色列军队继续空袭加沙地带](https://so.toutiao.com/search?keyword=以色列军队继续空袭加沙地带)
 1. [以色列央行宣布行长任期延长](https://so.toutiao.com/search?keyword=以色列央行宣布行长任期延长)
-1. [退休教授曾因吸烟致讲座场所被罚款](https://so.toutiao.com/search?keyword=退休教授曾因吸烟致讲座场所被罚款)
 1. [吴京闫妮新剧展现“爱与成长”](https://so.toutiao.com/search?keyword=吴京闫妮新剧展现“爱与成长”)
 1. [加沙地带卫生部门呼吁开辟安全通道](https://so.toutiao.com/search?keyword=加沙地带卫生部门呼吁开辟安全通道)
 1. [以色列外交部：已做好长期战争准备](https://so.toutiao.com/search?keyword=以色列外交部：已做好长期战争准备)
-1. [白宫回应中国驻旧金山总领馆遭冲闯](https://so.toutiao.com/search?keyword=白宫回应中国驻旧金山总领馆遭冲闯)
-1. [网友：女儿大学四年要花至少20万](https://so.toutiao.com/search?keyword=网友：女儿大学四年要花至少20万)
 1. [美国男子徒手爬以色列领事馆大楼](https://so.toutiao.com/search?keyword=美国男子徒手爬以色列领事馆大楼)
-1. [2023年应届生平均招聘月薪10342元](https://so.toutiao.com/search?keyword=2023年应届生平均招聘月薪10342元)
 1. [专家：巴以冲突将重绘加沙政治地图](https://so.toutiao.com/search?keyword=专家：巴以冲突将重绘加沙政治地图)
 1. [以方称已击毙近1000名哈马斯渗透者](https://so.toutiao.com/search?keyword=以方称已击毙近1000名哈马斯渗透者)
 1. [盖尔·加朵发文支持以色列引争议](https://so.toutiao.com/search?keyword=盖尔·加朵发文支持以色列引争议)
@@ -81,7 +99,6 @@
 1. [千里护送寻亲9年男子回家团圆](https://so.toutiao.com/search?keyword=千里护送寻亲9年男子回家团圆)
 1. [四川一出租甩客致人身亡？司机回应](https://so.toutiao.com/search?keyword=四川一出租甩客致人身亡？司机回应)
 1. [“国家队”出手对A股有何影响](https://so.toutiao.com/search?keyword=“国家队”出手对A股有何影响)
-1. [省委原书记落马1个多月3人同日被查](https://so.toutiao.com/search?keyword=省委原书记落马1个多月3人同日被查)
 1. [9个数字了解“一带一路”](https://so.toutiao.com/search?keyword=9个数字了解“一带一路”)
 1. [“全国网络普法行·四川站”举行](https://so.toutiao.com/search?keyword=“全国网络普法行·四川站”举行)
 1. [政府8万定制网红充气兔？官方辟谣](https://so.toutiao.com/search?keyword=政府8万定制网红充气兔？官方辟谣)
@@ -97,7 +114,6 @@
 1. [韩国亚运夺金免兵役的争议越来越大](https://so.toutiao.com/search?keyword=韩国亚运夺金免兵役的争议越来越大)
 1. [中国特使同巴勒斯坦外交官员通电话](https://so.toutiao.com/search?keyword=中国特使同巴勒斯坦外交官员通电话)
 1. [里弗斯谈与哈登关系：不好不坏](https://so.toutiao.com/search?keyword=里弗斯谈与哈登关系：不好不坏)
-1. [黎巴嫩当地民众焚烧以色列国旗](https://so.toutiao.com/search?keyword=黎巴嫩当地民众焚烧以色列国旗)
 1. [CIA前局长：在加沙巷战会非常残酷](https://so.toutiao.com/search?keyword=CIA前局长：在加沙巷战会非常残酷)
 1. [官方通报收割机下高速不免费](https://so.toutiao.com/search?keyword=官方通报收割机下高速不免费)
 1. [孟加拉国帕德玛大桥铁路连接线通车](https://so.toutiao.com/search?keyword=孟加拉国帕德玛大桥铁路连接线通车)
