--- a/archives/toutiao-search/2023-10-12.md
+++ b/archives/toutiao-search/2023-10-12.md
@@ -1,48 +1,67 @@
 # 2023-10-12
 
-共 203 条
+共 218 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 12 2023 14:01:29 GMT+0800 (China Standard Time) -->
-1. [租客怀孕5个月房东要求退租](https://so.toutiao.com/search?keyword=租客怀孕5个月房东要求退租)
-1. [光大集团原董事长李晓鹏被逮捕](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被逮捕)
-1. [为科学插上跨越山水的翅膀](https://so.toutiao.com/search?keyword=为科学插上跨越山水的翅膀)
-1. [刘暖曦直播4次后被投诉永久禁播](https://so.toutiao.com/search?keyword=刘暖曦直播4次后被投诉永久禁播)
+<!-- 最后更新时间 Thu Oct 12 2023 15:00:59 GMT+0800 (China Standard Time) -->
 1. [成都教育局回应初中生校内身亡](https://so.toutiao.com/search?keyword=成都教育局回应初中生校内身亡)
-1. [巴以冲突双方超2300人死亡](https://so.toutiao.com/search?keyword=巴以冲突双方超2300人死亡)
 1. [36岁患尿毒症男子跳水库轻生](https://so.toutiao.com/search?keyword=36岁患尿毒症男子跳水库轻生)
-1. [失联潜水员韩颋在水下百余米处被找到](https://so.toutiao.com/search?keyword=失联潜水员韩颋在水下百余米处被找到)
-1. [学校辟谣"霸凌女生亮相学校宣传片"](https://so.toutiao.com/search?keyword=学校辟谣"霸凌女生亮相学校宣传片")
-1. [连续1周Citywalk 女生左脚只能跛行](https://so.toutiao.com/search?keyword=连续1周Citywalk+女生左脚只能跛行)
-1. [旅游企业紧急应对巴以冲突](https://so.toutiao.com/search?keyword=旅游企业紧急应对巴以冲突)
-1. [普京：俄罗斯始终支持巴勒斯坦建国](https://so.toutiao.com/search?keyword=普京：俄罗斯始终支持巴勒斯坦建国)
-1. [农民断缴380元新农合？专家：别涨了](https://so.toutiao.com/search?keyword=农民断缴380元新农合？专家：别涨了)
-1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
+1. [为科学插上跨越山水的翅膀](https://so.toutiao.com/search?keyword=为科学插上跨越山水的翅膀)
 1. [女技师称遭灌酒性侵 警方不予立案](https://so.toutiao.com/search?keyword=女技师称遭灌酒性侵+警方不予立案)
+1. [东部战区回应美军机过航台湾海峡](https://so.toutiao.com/search?keyword=东部战区回应美军机过航台湾海峡)
+1. [巴以新一轮冲突已致超2500人死亡](https://so.toutiao.com/search?keyword=巴以新一轮冲突已致超2500人死亡)
+1. [刘暖曦直播4次后被投诉永久禁播](https://so.toutiao.com/search?keyword=刘暖曦直播4次后被投诉永久禁播)
 1. [为什么年轻人也开始被肺癌盯上](https://so.toutiao.com/search?keyword=为什么年轻人也开始被肺癌盯上)
-1. [如何看“佛山电翰”出现人传人现象](https://so.toutiao.com/search?keyword=如何看“佛山电翰”出现人传人现象)
-1. [外媒：以色列或将面临五线作战](https://so.toutiao.com/search?keyword=外媒：以色列或将面临五线作战)
+1. [学校辟谣"霸凌女生亮相学校宣传片"](https://so.toutiao.com/search?keyword=学校辟谣"霸凌女生亮相学校宣传片")
 1. [歌手黄安晒华为新机：飞机上信号满格](https://so.toutiao.com/search?keyword=歌手黄安晒华为新机：飞机上信号满格)
-1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
-1. [大衣哥被白发老人拎着行李箱堵家门](https://so.toutiao.com/search?keyword=大衣哥被白发老人拎着行李箱堵家门)
-1. [林高远因伤退赛无缘全锦赛男单四强](https://so.toutiao.com/search?keyword=林高远因伤退赛无缘全锦赛男单四强)
-1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
+1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
+1. [多国反对欧盟暂停援助巴勒斯坦](https://so.toutiao.com/search?keyword=多国反对欧盟暂停援助巴勒斯坦)
+1. [白宫：拜登没看到哈马斯斩首以儿童](https://so.toutiao.com/search?keyword=白宫：拜登没看到哈马斯斩首以儿童)
+1. [旅游企业紧急应对巴以冲突](https://so.toutiao.com/search?keyword=旅游企业紧急应对巴以冲突)
+1. [失联潜水员韩颋在水下百余米处被找到](https://so.toutiao.com/search?keyword=失联潜水员韩颋在水下百余米处被找到)
 1. [普京被国际法院发逮捕令后首出国门](https://so.toutiao.com/search?keyword=普京被国际法院发逮捕令后首出国门)
-1. [宝妈抱娃打不到车 交警帮拦下一辆](https://so.toutiao.com/search?keyword=宝妈抱娃打不到车+交警帮拦下一辆)
-1. [于文亮10天涨粉100万 本人回应](https://so.toutiao.com/search?keyword=于文亮10天涨粉100万+本人回应)
+1. [新一轮巴以冲突已致逾万人死伤](https://so.toutiao.com/search?keyword=新一轮巴以冲突已致逾万人死伤)
+1. [连续1周Citywalk 女生左脚只能跛行](https://so.toutiao.com/search?keyword=连续1周Citywalk+女生左脚只能跛行)
+1. [外媒：以色列或将面临五线作战](https://so.toutiao.com/search?keyword=外媒：以色列或将面临五线作战)
+1. [农民断缴380元新农合？专家：别涨了](https://so.toutiao.com/search?keyword=农民断缴380元新农合？专家：别涨了)
+1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
+1. [大衣哥被白发老人拎着行李箱堵家门](https://so.toutiao.com/search?keyword=大衣哥被白发老人拎着行李箱堵家门)
+1. [韩国关注巴以冲突：朝鲜强过哈马斯](https://so.toutiao.com/search?keyword=韩国关注巴以冲突：朝鲜强过哈马斯)
+1. [如何看“佛山电翰”出现人传人现象](https://so.toutiao.com/search?keyword=如何看“佛山电翰”出现人传人现象)
+1. [司机绕路带女乘客至陌生地段被约谈](https://so.toutiao.com/search?keyword=司机绕路带女乘客至陌生地段被约谈)
+1. [光大集团原董事长李晓鹏被逮捕](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被逮捕)
+1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
 1. [周杰伦演唱会前黄牛集体退票](https://so.toutiao.com/search?keyword=周杰伦演唱会前黄牛集体退票)
+1. [宝马车高速变道后紧急刹车降速至40](https://so.toutiao.com/search?keyword=宝马车高速变道后紧急刹车降速至40)
+1. [山东5市1区划入青岛圈](https://so.toutiao.com/search?keyword=山东5市1区划入青岛圈)
+1. [福建莆田一学生坠亡？当地回应](https://so.toutiao.com/search?keyword=福建莆田一学生坠亡？当地回应)
+1. [于文亮10天涨粉100万 本人回应](https://so.toutiao.com/search?keyword=于文亮10天涨粉100万+本人回应)
+1. [亓延军已任公安部常务副部长](https://so.toutiao.com/search?keyword=亓延军已任公安部常务副部长)
+1. [宝妈抱娃打不到车 交警帮拦下一辆](https://so.toutiao.com/search?keyword=宝妈抱娃打不到车+交警帮拦下一辆)
 1. [省委原书记落马1个多月3人同日被查](https://so.toutiao.com/search?keyword=省委原书记落马1个多月3人同日被查)
+1. [警方公开通缉2名电诈集团头目](https://so.toutiao.com/search?keyword=警方公开通缉2名电诈集团头目)
+1. [在建隧道发生疑似瓦斯爆炸 5人遇难](https://so.toutiao.com/search?keyword=在建隧道发生疑似瓦斯爆炸+5人遇难)
+1. [赵少康集结“战斗蓝”提8项政见](https://so.toutiao.com/search?keyword=赵少康集结“战斗蓝”提8项政见)
+1. [学校为减负要求学生不带书包回家](https://so.toutiao.com/search?keyword=学校为减负要求学生不带书包回家)
+1. [中国马术队巴黎奥运会参赛资格被取消](https://so.toutiao.com/search?keyword=中国马术队巴黎奥运会参赛资格被取消)
+1. [外媒：华为发布手机的方式值得赞扬](https://so.toutiao.com/search?keyword=外媒：华为发布手机的方式值得赞扬)
+1. [中国工会新一届领导机构诞生](https://so.toutiao.com/search?keyword=中国工会新一届领导机构诞生)
+1. [谭松韵新片演闫妮吴京女儿](https://so.toutiao.com/search?keyword=谭松韵新片演闫妮吴京女儿)
+1. [孙卓被拐案明日宣判 父母发声](https://so.toutiao.com/search?keyword=孙卓被拐案明日宣判+父母发声)
+1. [南方电网半年56人主动投案](https://so.toutiao.com/search?keyword=南方电网半年56人主动投案)
+1. [吴京片场喊谭松韵闺女](https://so.toutiao.com/search?keyword=吴京片场喊谭松韵闺女)
+1. [亚运冠军何杰荣归故里受欢迎](https://so.toutiao.com/search?keyword=亚运冠军何杰荣归故里受欢迎)
+1. [国企一领导主动投案自曝担惊受怕](https://so.toutiao.com/search?keyword=国企一领导主动投案自曝担惊受怕)
+1. [退休教授曾因吸烟致讲座场所被罚款](https://so.toutiao.com/search?keyword=退休教授曾因吸烟致讲座场所被罚款)
+1. [一汽丰田直播间被多少钱能买车刷屏](https://so.toutiao.com/search?keyword=一汽丰田直播间被多少钱能买车刷屏)
+1. [租客怀孕5个月房东要求退租](https://so.toutiao.com/search?keyword=租客怀孕5个月房东要求退租)
+1. [巴以冲突双方超2300人死亡](https://so.toutiao.com/search?keyword=巴以冲突双方超2300人死亡)
+1. [普京：俄罗斯始终支持巴勒斯坦建国](https://so.toutiao.com/search?keyword=普京：俄罗斯始终支持巴勒斯坦建国)
+1. [林高远因伤退赛无缘全锦赛男单四强](https://so.toutiao.com/search?keyword=林高远因伤退赛无缘全锦赛男单四强)
 1. [沧州银行堆“现金墙”展示信心](https://so.toutiao.com/search?keyword=沧州银行堆“现金墙”展示信心)
 1. [柯基被砍当事女子已离婚](https://so.toutiao.com/search?keyword=柯基被砍当事女子已离婚)
-1. [白宫：拜登没看到哈马斯斩首以儿童](https://so.toutiao.com/search?keyword=白宫：拜登没看到哈马斯斩首以儿童)
-1. [亓延军已任公安部常务副部长](https://so.toutiao.com/search?keyword=亓延军已任公安部常务副部长)
-1. [山东5市1区划入青岛圈](https://so.toutiao.com/search?keyword=山东5市1区划入青岛圈)
 1. [网友：女儿大学四年要花至少20万](https://so.toutiao.com/search?keyword=网友：女儿大学四年要花至少20万)
-1. [一汽丰田直播间被多少钱能买车刷屏](https://so.toutiao.com/search?keyword=一汽丰田直播间被多少钱能买车刷屏)
 1. [产妇拍下产床抓痕引20万妈妈共鸣](https://so.toutiao.com/search?keyword=产妇拍下产床抓痕引20万妈妈共鸣)
-1. [中国马术队巴黎奥运会参赛资格被取消](https://so.toutiao.com/search?keyword=中国马术队巴黎奥运会参赛资格被取消)
-1. [中国工会新一届领导机构诞生](https://so.toutiao.com/search?keyword=中国工会新一届领导机构诞生)
-1. [学校为减负要求学生不带书包回家](https://so.toutiao.com/search?keyword=学校为减负要求学生不带书包回家)
 1. [国台办为什么赞赏马英九](https://so.toutiao.com/search?keyword=国台办为什么赞赏马英九)
 1. [警方回应“武大学生遭性骚扰”](https://so.toutiao.com/search?keyword=警方回应“武大学生遭性骚扰”)
 1. [贪官忏悔：受贿买那么多古玩干什么](https://so.toutiao.com/search?keyword=贪官忏悔：受贿买那么多古玩干什么)
@@ -50,15 +69,12 @@
 1. [学者：美对以色列的支持可能会过火](https://so.toutiao.com/search?keyword=学者：美对以色列的支持可能会过火)
 1. [分析师：美国经济增长和通胀已见顶](https://so.toutiao.com/search?keyword=分析师：美国经济增长和通胀已见顶)
 1. [高校学生用方言配音西游记](https://so.toutiao.com/search?keyword=高校学生用方言配音西游记)
-1. [南方电网半年56人主动投案](https://so.toutiao.com/search?keyword=南方电网半年56人主动投案)
-1. [孙卓被拐案明日宣判 父母发声](https://so.toutiao.com/search?keyword=孙卓被拐案明日宣判+父母发声)
 1. [韩国瑜曝支持者都认为国民党太软弱](https://so.toutiao.com/search?keyword=韩国瑜曝支持者都认为国民党太软弱)
 1. [14岁男孩睾丸扭转超6小时险坏死](https://so.toutiao.com/search?keyword=14岁男孩睾丸扭转超6小时险坏死)
 1. [2023年应届生平均招聘月薪10342元](https://so.toutiao.com/search?keyword=2023年应届生平均招聘月薪10342元)
 1. [欧议员：欧盟不能再把以色列称朋友](https://so.toutiao.com/search?keyword=欧议员：欧盟不能再把以色列称朋友)
 1. [抖音10天涨粉百万的于文亮是谁](https://so.toutiao.com/search?keyword=抖音10天涨粉百万的于文亮是谁)
 1. [军嫂吐槽式炫夫：下班就回家带娃](https://so.toutiao.com/search?keyword=军嫂吐槽式炫夫：下班就回家带娃)
-1. [谭松韵新片演闫妮吴京女儿](https://so.toutiao.com/search?keyword=谭松韵新片演闫妮吴京女儿)
 1. [黎巴嫩当地民众焚烧以色列国旗](https://so.toutiao.com/search?keyword=黎巴嫩当地民众焚烧以色列国旗)
 1. [以色列军队继续空袭加沙地带](https://so.toutiao.com/search?keyword=以色列军队继续空袭加沙地带)
 1. [胡厚崑：华为正努力将5.5G带进现实](https://so.toutiao.com/search?keyword=胡厚崑：华为正努力将5.5G带进现实)
@@ -67,7 +83,6 @@
 1. [张琳艳热刺首秀：出场10分钟就进球](https://so.toutiao.com/search?keyword=张琳艳热刺首秀：出场10分钟就进球)
 1. [白宫回应中国驻旧金山总领馆遭冲闯](https://so.toutiao.com/search?keyword=白宫回应中国驻旧金山总领馆遭冲闯)
 1. [多国人士高度赞赏共建一带一路成就](https://so.toutiao.com/search?keyword=多国人士高度赞赏共建一带一路成就)
-1. [退休教授曾因吸烟致讲座场所被罚款](https://so.toutiao.com/search?keyword=退休教授曾因吸烟致讲座场所被罚款)
 1. [伊拉克或将对美元进行管制](https://so.toutiao.com/search?keyword=伊拉克或将对美元进行管制)
 1. [媒体：以总理正处于内忧外患的境地](https://so.toutiao.com/search?keyword=媒体：以总理正处于内忧外患的境地)
 1. [政府奖励双冠王切阳什姐30万](https://so.toutiao.com/search?keyword=政府奖励双冠王切阳什姐30万)
